remove jump because of position change of the navbar (when becomes fixed, jumps out of pages flow)

--- a/components/navbar.css
+++ b/components/navbar.css
@@ -38,6 +38,11 @@ body ul li {
   width: 100%;
 }
 
+.navbar-placeholder {
+  height: 350px;
+  display: none;
+}
+
 .arrow {
   height: 90px;
   width: 100%;
